# geoSpatial

./: .gitignore  README.md  pyproject.toml
src/: europeanRiverBasins.ipynb  globalForests.ipynb  globalVegetation.ipynb
